feat: lower Java source target from 17 to 8