@@ -54,7 +54,7 @@ public class TableArgumentsProvider extends AnnotationBasedArgumentsProvider<Tab
      */
     @Override
     protected Stream<? extends Arguments> provideArguments(ExtensionContext context, TableTest tableTest) {
-        String input = tableTest.resource().isBlank()
+        String input = tableTest.resource().trim().isEmpty()
             ? tableTest.value()
             : InputResolver.loadResource(tableTest.resource(), tableTest.encoding(), context.getRequiredTestClass());
         return provideArgumentsForInput(context, input);
